--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -305,11 +305,11 @@
 		function resizePlayers() {
 			let e = document.createElement("div");
 			e.style.cssText = "overflow: scroll; visibility: hidden; position: absolute;";
-			let w = (window.innerWidth - e.offsetWidth + e.clientWidth);
+			let w =  (window.innerWidth - e.offsetWidth + e.clientWidth);
 			e.remove();
 			[resizePlayers.w, resizePlayers.h] = [w + "px", parseInt(w / 16 * 9) + "px"];
 			e = document.getElementById("camera-video");
-			[e.width, e.height] = [w.toString(), parseInt(w * e.videoHeight / e.videoWidth).toString()];
+			[e.width, e.height] = [w.toString(), parseInt(w * (e.videoHeight / e.videoWidth || 4 / 3)).toString()];
 			document.getElementById("player0-scanresult-div").style.width = resizePlayers.w;
 			document.getElementById("camera-scanresult-div").style.width = resizePlayers.w;
 			if (enablePlayers.player0 && enablePlayers.player1 && enablePlayers.player2 && enablePlayers.player3) {
