--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -99,7 +99,7 @@
 			<button onclick="cameraOn();">On</button>
 			<button onclick="cameraOff();">Off</button>
 			<button id="camera-resize-button" onclick="resizePlayers()">Resize</button>
-			<button id="camera-scan-button" onclick="chaoxingCheckinQrcode(screenshot(document.getElementById('camera-video')), 'camera-scanresult-div'); onclickCooldown(this.id);" style="display: none;">Scan</button>
+			<button id="camera-scan-button" onclick="chaoxingCheckinQrcode(screenshot(document.getElementById('camera-video'), 0.6), 'camera-scanresult-div'); onclickCooldown(this.id);" style="display: none;">Scan</button>
 		</div>
 		<div id="camera-div">
 			<video id="camera-video" width="640" height="480" autoplay></video>
@@ -591,14 +591,14 @@
 		}
 
 		/* Take video screenshot. */
-		function screenshot(video) {
+		function screenshot(video, quality = 1) {
 			let canvas = document.createElement("canvas");
 			canvas.width = video.videoWidth;
 			canvas.height = video.videoHeight;
 			let ctx = canvas.getContext("2d");
 			ctx.save();
 			ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-			let img_src = canvas.toDataURL("image/jpeg", 1.0);
+			let img_src = canvas.toDataURL("image/jpeg", quality);
 			canvas.remove();
 			return img_src;
 		}
