--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -595,9 +595,7 @@
 			let canvas = document.createElement("canvas");
 			canvas.width = video.videoWidth;
 			canvas.height = video.videoHeight;
-			let ctx = canvas.getContext("2d");
-			ctx.save();
-			ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+			canvas.getContext("2d").drawImage(video, 0, 0, canvas.width, canvas.height);
 			let img_src = canvas.toDataURL("image/jpeg", quality);
 			canvas.remove();
 			return img_src;
