--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -515,8 +515,7 @@
 				td.appendChild(document.createTextNode(lesson["name"]));
 				tr.appendChild(td);
 				td = document.createElement("td");
-				for (i in lesson["teacher"])
-					td.appendChild(document.createTextNode(lesson["teacher"][i] + " "));
+				lesson["teacher"].forEach((teacher) => {td.appendChild(document.createTextNode(teacher + " "))});
 				tr.appendChild(td);
 				td = document.createElement("td");
 				td.appendChild(document.createTextNode(lesson["location"]));
