--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -601,19 +601,17 @@
 		/* Qrcode checkin. */
 		async function chaoxingCheckinQrcode(img_src, div_id) {
 			let location_str = localStorage.getItem("location_");
-			let location_ = (!location_str) ? locations["B楼"] : JSON.parse(location_str);
-			let res = await post("/chaoxing/checkin_checkin_qrcode_img", data = {"img_src": img_src, "location": location_});
-			document.getElementById(div_id).innerText = res.text || "Checkin error:\nBackend error.";
+			let res = await post("/chaoxing/checkin_checkin_qrcode_img", data = {"img_src": img_src, "location": (!location_str) ? locations["B楼"] : JSON.parse(location_str)});
+			document.getElementById(div_id).innerText = res.text || "Checkin error. (Backend error)";
 			if (res.status_code == 200 && res.text.indexOf("success") != -1)
-				alert("Checked in successfully.");
+				alert(res.text);
 		};
 
 		/* Location checkin. */
 		async function chaoxingCheckinLocation(activity) {
 			let location_str = localStorage.getItem("location_");
-			let location_ = (!location_str) ? locations["B楼"] : JSON.parse(location_str);
-			let res = await post("/chaoxing/checkin_checkin_location", data = {"activity": activity, "location": location_});
-			alert((res.status_code == 200) ? "Checked in successfully." : "Checkin failed.");
+			let res = await post("/chaoxing/checkin_checkin_location", data = {"activity": activity, "location": (!location_str) ? locations["B楼"] : JSON.parse(location_str)});
+			alert((res.status_code == 200) ? res.text : "Checkin error. (Backend error)");
 		}
 	</script>
 </html>
