--- a/src/backend/templates/blank.html
+++ b/src/backend/templates/blank.html
@@ -8,7 +8,7 @@
 	<body>
 		<div style="font-size:22px; font-family: sans-serif;">
 		The APP content is opened in your browser automatically.<br>
-		If not, visit "https://127.0.0.1:5001/" in your browser manually.
+		If not, visit "https://127.0.0.1:5001" in your browser manually.
 		</div>
 	</body>
 </htnl>
