--- a/src/backend/templates/blank.html
+++ b/src/backend/templates/blank.html
@@ -7,8 +7,8 @@
 
 	<body>
 		<div style="font-size:22px; font-family: sans-serif;">
-		The APP content is opened in your browser automatically.<br>
-		If not, visit "http://127.0.0.1:5001" in your browser manually.
+		The APP will launch and display the contents in your browser automatically.<br>
+		If not, visit "http://127.0.0.1:5001" in you browser manually.
 		</div>
 	</body>
 </htnl>
