--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -138,12 +138,10 @@
 
 		/* Get request. */
 		async function get(url = "", params = {}) {
-			let qstr = new URLSearchParams(params).toString();
 			let status_code = 404, text = "";
 			try {
-				let res = await fetch(qstr ? `${url}?${qstr}` : url);
+				let res = await fetch(Object.keys(params).length ? `${url}?${new URLSearchParams(params).toString()}` : url);
 				[status_code, text] = [res.status, await res.text()];
-				
 			} catch (err) {}
 			return {status_code: status_code, text, json: () => {try {return JSON.parse(text);} catch (err) {return undefined;}}};
 		}
