display classroom location in button for curriculum

--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -526,13 +526,14 @@
 				lesson["teacher"].forEach((teacher) => {td.appendChild(document.createTextNode(teacher + " "))});
 				tr.appendChild(td);
 				td = document.createElement("td");
-				td.appendChild(document.createTextNode(lesson["location"]));
 				if ("livestream" in lesson) {
 					let btn = document.createElement("button");
-					btn.innerText = lesson["livestream"]["device"] + ", " + lesson["livestream"]["live_id"];
-					btn.setAttribute("onclick", "setClassroom('" + lesson["livestream"]["url"] + "', '" + lesson[location] + "')");
+					btn.innerText = lesson["location"];
+					btn.setAttribute("onclick", "setClassroom('" + lesson["livestream"]["url"] + "', '" + lesson["location"] + "')");
 					td.appendChild(btn);
 				}
+				else
+					td.appendChild(document.createTextNode(lesson["location"]));
 				tr.appendChild(td);
 				tableBody.appendChild(tr);
 			}
