--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -517,6 +517,7 @@
 			let table = document.createElement("table");
 			table.border = "1";
 			let tableBody = document.createElement("tbody");
+			let timetable = chaoxingLogin.curriculum["details"]["time"]["timetable"];
 			for (let class_id in chaoxingLogin.curriculum["lessons"]) {
 				let lesson = chaoxingLogin.curriculum["lessons"][class_id];
 				let tr = document.createElement("tr"), td = document.createElement("td");
@@ -524,6 +525,12 @@
 				tr.appendChild(td);
 				td = document.createElement("td");
 				lesson["teacher"].forEach((teacher) => {td.appendChild(document.createTextNode(teacher + " "))});
+				tr.appendChild(td);
+				td = document.createElement("td");
+				for (i in lesson["time"]) {
+					let time = lesson["time"][i];
+					td.appendChild(document.createTextNode("Day " + time["day"] + " " + timetable[time["period_begin"] - 1].slice(0, 5) + "-" + timetable[time["period_end"] - 1].slice(6, 11) + "<br>"));
+				}
 				tr.appendChild(td);
 				td = document.createElement("td");
 				if ("livestream" in lesson) {
