--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -46,21 +46,21 @@
 
 		<div id="xdcheckin-title-div" class="div-center" style="display: none; font-size:48px; font-family: sans-serif; font-weight: bold;">Xdcheckin</div>
 		<div id="players-buttons-div" class="div-center" style="display: none;">
-			<button onclick="enablePlayers.player0.initPlay(); enablePlayers.player1.initPlay(); enablePlayers.player2.initPlay(); enablePlayers.player3.initPlay();">Play All</button>
-			<button onclick="enablePlayers.player0.stop(); enablePlayers.player1.stop(); enablePlayers.player2.stop(); enablePlayers.player3.stop(); cameraOff();">Stop All</button>
-			<button onclick="enablePlayers.player0.unmute(); enablePlayers.player1.unmute(); enablePlayers.player2.unmute(); enablePlayers.player3.unmute();">Unmute All</button>
-			<button onclick="enablePlayers.player0.mute(); enablePlayers.player1.mute(); enablePlayers.player2.mute(); enablePlayers.player3.mute();">Mute All</button>
+			<button onclick="initPlayers.player0.initPlay(); initPlayers.player1.initPlay(); initPlayers.player2.initPlay(); initPlayers.player3.initPlay();">Play All</button>
+			<button onclick="initPlayers.player0.stop(); initPlayers.player1.stop(); initPlayers.player2.stop(); initPlayers.player3.stop(); cameraOff();">Stop All</button>
+			<button onclick="initPlayers.player0.unmute(); initPlayers.player1.unmute(); initPlayers.player2.unmute(); initPlayers.player3.unmute();">Unmute All</button>
+			<button onclick="initPlayers.player0.mute(); initPlayers.player1.mute(); initPlayers.player2.mute(); initPlayers.player3.mute();">Mute All</button>
 			<button onclick="resizePlayers()">Resize All</button>
 		</div>
 
 		<div id="player0-buttons-div" class="div-center" style="display: none;">
 			<B style="font-size:40px; font-family: sans-serif;">PPTVideo</B>
 			&emsp;
-			<button onclick="enablePlayers.player0.initPlay();">Play</button>
-			<button onclick="enablePlayers.player0.stop();">Stop</button>
-			<button onclick="enablePlayers.player0.unmute();">Unmute</button>
-			<button onclick="enablePlayers.player0.mute();;">Mute</button>
-			<button id="player0-scan-button" onclick="chaoxingCheckinQrcode(screenshot(enablePlayers.player0.tag), 'player0-scanresult-div'); onclickCooldown(this.id);" style="display: none;">Scan</button>
+			<button onclick="initPlayers.player0.initPlay();">Play</button>
+			<button onclick="initPlayers.player0.stop();">Stop</button>
+			<button onclick="initPlayers.player0.unmute();">Unmute</button>
+			<button onclick="initPlayers.player0.mute();;">Mute</button>
+			<button id="player0-scan-button" onclick="chaoxingCheckinQrcode(screenshot(initPlayers.player0.tag), 'player0-scanresult-div'); onclickCooldown(this.id);" style="display: none;">Scan</button>
 		</div>
 		<div id="player0-div"></div>
 		<div id="player0-scanresult-div" style="text-align: center; word-wrap: break-word; width: 400px;"></div>
@@ -68,30 +68,30 @@
 		<div id="player1-buttons-div" class="div-center" style="display: none;">
 			<B style="font-size:40px; font-family: sans-serif;">TeacherTrack</B>
 			&emsp;
-			<button onclick="enablePlayers.player1.initPlay();">Play</button>
-			<button onclick="enablePlayers.player1.stop();">Stop</button>
-			<button onclick="enablePlayers.player1.unmute();">Unmute</button>
-			<button onclick="enablePlayers.player1.mute();;">Mute</button>
+			<button onclick="initPlayers.player1.initPlay();">Play</button>
+			<button onclick="initPlayers.player1.stop();">Stop</button>
+			<button onclick="initPlayers.player1.unmute();">Unmute</button>
+			<button onclick="initPlayers.player1.mute();;">Mute</button>
 		</div>
 		<div id="player1-div"></div>
 
 		<div id="player2-buttons-div" class="div-center" style="display: none;">
 			<B style="font-size:40px; font-family: sans-serif;">TeacherFull</B>
 			&emsp;
-			<button onclick="enablePlayers.player2.initPlay();">Play</button>
-			<button onclick="enablePlayers.player2.stop();">Stop</button>
-			<button onclick="enablePlayers.player2.unmute();">Unmute</button>
-			<button onclick="enablePlayers.player2.mute();">Mute</button>
+			<button onclick="initPlayers.player2.initPlay();">Play</button>
+			<button onclick="initPlayers.player2.stop();">Stop</button>
+			<button onclick="initPlayers.player2.unmute();">Unmute</button>
+			<button onclick="initPlayers.player2.mute();">Mute</button>
 		</div>
 		<div id="player2-div"></div>
 
 		<div id="player3-buttons-div" class="div-center" style="display: none;">
 			<B style="font-size:40px; font-family: sans-serif;">StudentFull</B>
 			&emsp;
-			<button onclick="enablePlayers.player3.initPlay();">Play</button>
-			<button onclick="enablePlayers.player3.stop();">Stop</button>
-			<button onclick="enablePlayers.player3.unmute();">Unmute</button>
-			<button onclick="enablePlayers.player3.mute();">Mute</button>
+			<button onclick="initPlayers.player3.initPlay();">Play</button>
+			<button onclick="initPlayers.player3.stop();">Stop</button>
+			<button onclick="initPlayers.player3.unmute();">Unmute</button>
+			<button onclick="initPlayers.player3.mute();">Mute</button>
 		</div>
 		<div id="player3-div"></div>
 
@@ -134,6 +134,15 @@
 		function assert(condition, message) {
 			if (!condition)
 				throw new Error(message || "Assertion failed");
+		}
+
+		function isValidUrl(url) {
+			try {
+				new URL(url);
+				return true;
+			} catch (err) {
+				return false;
+			}
 		}
 
 		/* Get request. */
@@ -220,64 +229,6 @@
 			document.getElementById("camera-resize-button").style.display = "none";
 			/* Create video players. */
 			(localStorage.getItem("classroom") && localStorage.getItem("classroomName")) ? setClassroom(localStorage.getItem("classroom"), localStorage.getItem("classroomName")) : randClassroom();
-			enablePlayers.player0 = new Aliplayer({
-				id: "player0-div",
-				isLive: true,
-				useH5Prism: true,
-				width: resizePlayers.w,
-				height: resizePlayers.h,
-				autoplay: true,
-				playsinline: true,
-				source: setClassroom.pptVideo
-			}, () => {
-				enablePlayers.player0.mute();
-				enablePlayers.player0.play();
-				enablePlayers.player0.on("canplay", () => {
-					let t = enablePlayers.player0.getCurrentTime();
-					if (enablePlayers.player1.getStatus() == "playing")
-						enablePlayers.player1.seek(t);
-					if (enablePlayers.player2.getStatus() == "playing")
-						enablePlayers.player2.seek(t);
-					if (enablePlayers.player3.getStatus() == "playing")
-						enablePlayers.player3.seek(t);
-				})
-			});
-			enablePlayers.player1 = new Aliplayer({
-				id: "player1-div",
-				isLive: true,
-				useH5Prism: true,
-				width: resizePlayers.w,
-				height: resizePlayers.h,
-				playsinline: true,
-				source: setClassroom.teacherTrack
-			}, () => {
-				enablePlayers.player1.mute();
-				enablePlayers.player1.stop();
-			});
-			enablePlayers.player2 = new Aliplayer({
-				id: "player2-div",
-				isLive: true,
-				useH5Prism: true,
-				width: resizePlayers.w,
-				height: resizePlayers.h,
-				playsinline: true,
-				source: setClassroom.teacherFull
-			}, () => {
-				enablePlayers.player2.mute();
-				enablePlayers.player2.stop();
-			});
-			enablePlayers.player3 = new Aliplayer({
-				id: "player3-div",
-				isLive: true,
-				useH5Prism: true,
-				width: resizePlayers.w,
-				height: resizePlayers.h,
-				playsinline: true,
-				source: setClassroom.studentFull
-			}, () => {
-				enablePlayers.player3.mute();
-				enablePlayers.player3.stop();
-			});
 			enablePlayers.success = true;
 			enablePlayers.calling = false;
 		}
@@ -320,12 +271,14 @@
 			[resizePlayers.w, resizePlayers.h] = [w + "px", parseInt(w / 16 * 9) + "px"];
 			document.getElementById("player0-scanresult-div").style.width = resizePlayers.w;
 			document.getElementById("camera-scanresult-div").style.width = resizePlayers.w;
-			if (enablePlayers.player0 && enablePlayers.player1 && enablePlayers.player2 && enablePlayers.player3) {
-				enablePlayers.player0.setPlayerSize(resizePlayers.w, resizePlayers.h);
-				enablePlayers.player1.setPlayerSize(resizePlayers.w, resizePlayers.h);
-				enablePlayers.player2.setPlayerSize(resizePlayers.w, resizePlayers.h);
-				enablePlayers.player3.setPlayerSize(resizePlayers.w, resizePlayers.h);
-			}
+			if (initPlayers.player0)
+				initPlayers.player0.setPlayerSize(resizePlayers.w, resizePlayers.h);
+			if (initPlayers.player1)
+				initPlayers.player0.setPlayerSize(resizePlayers.w, resizePlayers.h);
+			if (initPlayers.player2)
+				initPlayers.player2.setPlayerSize(resizePlayers.w, resizePlayers.h);
+			if (initPlayers.player3)
+				initPlayers.player3.setPlayerSize(resizePlayers.w, resizePlayers.h);
 			resizeCamera(w);
 		}
 
@@ -339,6 +292,84 @@
 			document.getElementById("camera-scanresult-div").style.width = resizeCamera.w;
 		}
 
+		/* Player creation and selection. */
+		function initPlayers() {
+			if (initPlayers.calling)
+				return;
+			initPlayers.calling = true;
+			if (initPlayers.player0)
+				initPlayers.player0.dispose();
+			if (initPlayers.player1)
+				initPlayers.player0.dispose();
+			if (initPlayers.player2)
+				initPlayers.player2.dispose();
+			if (initPlayers.player3)
+				initPlayers.player3.dispose();
+			if (isValidUrl(setClassroom.pptVideo))
+				initPlayers.player0 = new Aliplayer({
+					id: "player0-div",
+					isLive: true,
+					useH5Prism: true,
+					width: resizePlayers.w,
+					height: resizePlayers.h,
+					autoplay: true,
+					playsinline: true,
+					source: setClassroom.pptVideo
+				}, () => {
+					initPlayers.player0.mute();
+					initPlayers.player0.play();
+					initPlayers.player0.on("canplay", () => {
+						let t = initPlayers.player0.getCurrentTime();
+						if (initPlayers.player1.getStatus() == "playing")
+							initPlayers.player1.seek(t);
+						if (initPlayers.player2.getStatus() == "playing")
+							initPlayers.player2.seek(t);
+						if (initPlayers.player3.getStatus() == "playing")
+							initPlayers.player3.seek(t);
+					})
+				});
+			if (isValidUrl(setClassroom.teacherTrack))
+				initPlayers.player1 = new Aliplayer({
+					id: "player1-div",
+					isLive: true,
+					useH5Prism: true,
+					width: resizePlayers.w,
+					height: resizePlayers.h,
+					playsinline: true,
+					source: setClassroom.teacherTrack
+				}, () => {
+					initPlayers.player1.mute();
+					initPlayers.player1.stop();
+				});
+			if (isValidUrl(setClassroom.teacherFull))
+				initPlayers.player2 = new Aliplayer({
+					id: "player2-div",
+					isLive: true,
+					useH5Prism: true,
+					width: resizePlayers.w,
+					height: resizePlayers.h,
+					playsinline: true,
+					source: setClassroom.teacherFull
+				}, () => {
+					initPlayers.player2.mute();
+					initPlayers.player2.stop();
+				});
+			if (isValidUrl(setClassroom.studentFull))
+				initPlayers.player3 = new Aliplayer({
+					id: "player3-div",
+					isLive: true,
+					useH5Prism: true,
+					width: resizePlayers.w,
+					height: resizePlayers.h,
+					playsinline: true,
+					source: setClassroom.studentFull
+				}, () => {
+					initPlayers.player3.mute();
+					initPlayers.player3.stop();
+				});
+			initPlayers.calling = false;
+		}
+
 		/* Video sources control. */
 		function setClassroom(url, classroomName = "Unknown") {
 			let params = new URLSearchParams(decodeURIComponent(new URL(url).search));
@@ -346,19 +377,8 @@
 			localStorage.setItem("classroomName", classroomName);
 			localStorage.setItem("classroom", url);
 			document.getElementById("xdcheckin-title-div").innerText = "Xdcheckin: " + classroomName;
-			[setClassroom.pptVideo, setClassroom.teacherTrack, setClassroom.teacherFull, setClassroom.studentFull] = [info.videoPath.pptVideo, info.videoPath.teacherTrack, info.videoPath.teacherFull, info.videoPath.studentFull];
-			if (enablePlayers.player0 && enablePlayers.player1 && enablePlayers.player2 && enablePlayers.player3) {
-				enablePlayers.player0.loadByUrl(setClassroom.pptVideo);
-				enablePlayers.player1.loadByUrl(setClassroom.teacherTrack);
-				enablePlayers.player1.mute();
-				enablePlayers.player1.stop();
-				enablePlayers.player2.loadByUrl(setClassroom.teacherFull);
-				enablePlayers.player2.mute();
-				enablePlayers.player2.stop();
-				enablePlayers.player3.loadByUrl(setClassroom.studentFull);
-				enablePlayers.player3.mute();
-				enablePlayers.player3.stop();
-			}
+			[setClassroom.pptVideo, setClassroom.teacherTrack, setClassroom.teacherFull, setClassroom.studentFull] = [info.videoPath.pptVideo || "", info.videoPath.teacherTrack || "", info.videoPath.teacherFull || "", info.videoPath.studentFull || ""];
+			initPlayers();
 		}
 
 		/* Randomize classroom. */
@@ -374,13 +394,10 @@
 				return;
 			if (input === "")
 				return alert("Invalid input.");
-			try {
-				let url = new URL(input);
-			}
-			catch (err) {
-				return alert("Invalid URL.");
-			}
-			setClassroom(input, "Extracted");
+			if (isValidUrl(input))
+				setClassroom(input, "Extracted");
+			else
+				alert("Invalid URL.");
 		}
 
 		async function extractClassroom() {
@@ -406,10 +423,10 @@
 				let info = JSON.parse((new URLSearchParams(decodeURIComponent(url.search))).get("info"));
 				assert(!("msg" in info["videoPath"]));
 				let info_new = {"videoPath": {}};
-				info_new["videoPath"]["teacherFull"] = info["videoPath"]["teacherFull"];
-				info_new["videoPath"]["teacherTrack"] = info["videoPath"]["teacherTrack"];
-				info_new["videoPath"]["pptVideo"] = info["videoPath"]["pptVideo"];
-				info_new["videoPath"]["studentFull"] = info["videoPath"]["studentFull"];
+				info_new["videoPath"]["teacherFull"] = info["videoPath"]["teacherFull"] || "";
+				info_new["videoPath"]["teacherTrack"] = info["videoPath"]["teacherTrack"] || "";
+				info_new["videoPath"]["pptVideo"] = info["videoPath"]["pptVideo"] || "";
+				info_new["videoPath"]["studentFull"] = info["videoPath"]["studentFull"] || "";
 				let url_new = `${url.protocol}//${url.hostname}${url.pathname}` + "?info=" + encodeURIComponent(JSON.stringify(info_new));
 				prompt("Extracted URL:", url_new);
 			}
