--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -46,10 +46,10 @@
 
 		<div id="xdcheckin-title-div" class="div-center" style="display: none; font-size:48px; font-family: sans-serif; font-weight: bold;">Xdcheckin</div>
 		<div id="players-buttons-div" class="div-center" style="display: none;">
-			<button onclick="initPlayers.player0.initPlay(); initPlayers.player1.initPlay(); initPlayers.player2.initPlay(); initPlayers.player3.initPlay();">Play All</button>
-			<button onclick="initPlayers.player0.stop(); initPlayers.player1.stop(); initPlayers.player2.stop(); initPlayers.player3.stop(); cameraOff();">Stop All</button>
-			<button onclick="initPlayers.player0.unmute(); initPlayers.player1.unmute(); initPlayers.player2.unmute(); initPlayers.player3.unmute();">Unmute All</button>
-			<button onclick="initPlayers.player0.mute(); initPlayers.player1.mute(); initPlayers.player2.mute(); initPlayers.player3.mute();">Mute All</button>
+			<button onclick="if (initPlayers.player0) initPlayers.player0.initPlay(); if (initPlayers.player1) initPlayers.player1.initPlay(); if (initPlayers.player2) initPlayers.player2.initPlay(); if (initPlayers.player3) initPlayers.player3.initPlay();">Play All</button>
+			<button onclick="if (initPlayers.player0) initPlayers.player0.stop(); if (initPlayers.player1) initPlayers.player1.stop(); if (initPlayers.player2) initPlayers.player2.stop(); if (initPlayers.player3) initPlayers.player3.stop(); cameraOff();">Stop All</button>
+			<button onclick="if (initPlayers.player0) initPlayers.player0.unmute(); if (initPlayers.player1) initPlayers.player1.unmute(); if (initPlayers.player2) initPlayers.player2.unmute(); if (initPlayers.player3) initPlayers.player3.unmute();">Unmute All</button>
+			<button onclick="if (initPlayers.player0) initPlayers.player0.mute(); if (initPlayers.player1) initPlayers.player1.mute(); if (initPlayers.player2) initPlayers.player2.mute(); if (initPlayers.player3) initPlayers.player3.mute();">Mute All</button>
 			<button onclick="resizePlayers()">Resize All</button>
 		</div>
 
